main | add json converter on client